--- a/vignettes/NMsim-DataCreate.Rmd
+++ b/vignettes/NMsim-DataCreate.Rmd
@@ -1,17 +1,22 @@
 ---
 title: "Creation of Simulation Data Sets"
+author: 
+  - name: "Philip Delff"
+date: '`r format(Sys.Date(), "%B %d, %Y")`'
+toctitle: "Contents"
 output:
-rmarkdown::html_vignette:
-    toc: true
-    code_folding: show
-Suggests: markdown
-VignetteBuilder: knitr
-vignette: >
-  %\VignetteIndexEntry{06dsCreate}
-  %\VignetteEngine{knitr::rmarkdown}
-  %\VignetteEncoding{UTF-8}
-header-includes:
-- \usepackage{ae}
+    html_document:
+      toc: true
+      toc_depth: 4
+      toc_float: true
+      number_sections: false
+      df_print: kable
+      editor_options:
+        chunk_output_type: inline
+        code_folding: show
+bibliography: [packages.bib]
+pkgdown:
+  as_is: true
 ---
 
 ```{r,include = FALSE}
