--- a/vignettes/examples.Rmd
+++ b/vignettes/examples.Rmd
@@ -22,11 +22,9 @@ header-includes:
 [**NMsim - Seamless NONMEM Simulation Platform in R**](NMsim-intro.html)  
 Authors: **Philip Delff**  
 Configuration  
-Simulation of new subjects  
-Simulation of typical subjects  
+Simulation of typical subjects and new subjects
 Creation of Simulation data sets  
 Simulate multiple models  
 Reuse Emperical Bayes' Estimates (known ETAs)  
-Prediction intervals  
-Read previously generated simulations 
+Read previously generated simulations  
 
